@@ -68,6 +68,7 @@ void CLASS refinement() {}
 /*AMaZE*/
 #include <amaze_demosaic_RT.cc>
 #include <CA_correct_RT.cc>
+#include <expo_before.c>
 #include <cfa_linedn_new.c>
 #include <cfa_impulse_gauss.c>
 #include <green_equi.c>
@@ -78,6 +79,7 @@ void CLASS amaze_demosaic_RT() { ahd_interpolate();}
 void CLASS green_equilibrate(float thresh) {} 
 void CLASS cfa_linedn(float linenoise){}
 void CLASS cfa_impulse_gauss(float lclean, float cclean){}
+void CLASS exp_bef(floati a,float b){}
 #endif
 
 #define sget4(s) sget4((uchar *)s)
