@@ -209,6 +209,7 @@ class DllDef LibRaw
     void        fbdd(int noiserd);
     void        vcd_interpolate(int ahd_cutoff);
     void        amaze_demosaic_RT();
+    void	exp_bef(float expos, float preser);
     void        CA_correct_RT(float cared, float cablue);
     void        cfa_linedn(float linenoise);
     void        cfa_impulse_gauss(float lclean, float cclean);
