@@ -1,3 +1,9 @@
+2011-01-10 Alex Tutubalin <lexa@lexa.ru>
+	* Three patches provided by Jacques Desmis:
+		- Exposure correction before demosaic (demosaic pack GPL3)
+		- OpenMP speed-up in median filters (demosaic pack GPL2)
+		- OpenMP speed-up in green equilibration (demosaic pack GPL3)
+
 2010-12-22 Alex Tutubalin <lexa@lexa.ru>
         * Zero copy huffman buffer for LibRaw_buffer_datastream
         * Fixed memory leak in compressed NEFs handling
